# thinks

./: README.md
docs/: index.md
front/: package.json  pnpm-lock.yaml  vite.config.ts
front/src/: index.css  main.tsx
front/src/lexical/hooks/: useModal.tsx
front/src/lexical/nodes/: AutocompleteNode.tsx  EquationComponent.tsx  EquationNode.tsx  ImageComponent.tsx  ImageNode.tsx  Nodes.ts  RecordNode.tsx  StickyComponent.tsx  StickyNode.tsx  TableCellNodes.ts  TableComponent.tsx  TableNode.tsx
front/src/lexical/plugins/: TablePlugin.tsx
front/src/lexical/plugins/ActionsPlugin/: index.tsx
front/src/lexical/plugins/AutoEmbedPlugin/: index.tsx
front/src/lexical/plugins/AutocompletePlugin/: index.tsx
front/src/lexical/plugins/CodeActionMenuPlugin/: index.tsx
front/src/lexical/plugins/CollapsiblePlugin/: CollapsibleTitleNode.ts  index.ts
front/src/lexical/themes/: CommentEditorTheme.ts  PlaygroundEditorTheme.css  StickyEditorTheme.ts
front/src/lexical/ui/: Button.tsx  ColorPicker.tsx  DropdownColorPicker.tsx  ImageResizer.tsx  KatexEquationAlterer.tsx
front/src/lexical/utils/: environment.ts  rect.ts  useLayoutEffect.ts
front/src/notes/: NewNotePage.tsx  NotePage.tsx  Viewer.tsx  note.ts
front/src/notes/editor/: Composer.tsx  Editor.tsx
front/src/records/: RecordsPage.tsx  record.ts
front/src/routes/: error-page.tsx
server/: Cargo.toml
server/src/: http.rs  record.rs  storage.rs
server/src/embedded/migrations/: V001__initial.sql  V002__initial_Storage.sql
server/src/fixtures/: records_100.sql  records_fixture.py
(+18 files in other folders)
